# discord-rss-injector

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
src/: error.rs  feed_receiver.rs  main.rs
