[package]
name = "rss-feed-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
env_logger = "0.11.10"
feed-rs = "2.3.1"
log = "0.4.29"
reqwest = { version = "0.13.3", features = ["rustls-no-provider"], default-features = false }
rustls = { version = "0.23.40", features = ["log", "ring"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
